# mlww

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: run-tests.yml
docs/source/: conf.py  index.rst  installation.md  testgen.rst  testmain.rst
examples/: example_generate.py  example_test.py  example_train.py  example_use.py
models/: mlww_5x5x4_030525.pt
src/mlww/: _version.py  generate.py  test_dev.py  testgen.py  testmain.py  train.py  utility.py
tests/: test_generate.py  test_train.py
